# polykit

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  REMOTE_LOGGING.md  WARP.md  __init__.py  animation.py  argparser.py  async_utils.py  dsbase.code-workspace  errors.py  ffmpeg_functions.py  files.py  log.py  macos.py  media.py  mypy.ini  polykit.code-workspace  progress.py  pyproject.toml  ruff.toml  setup.py  shell.py  sys.py  text.py  thread.py  time.py
.github/workflows/: docs.yml
notifiers/: loggers.py  send_mail.py  send_telegram.py  telegram_api_helper.py
src/dsbase/: __init__.py
src/dsbase/auth/: auth.py
src/dsbase/configure/: config.py  watchers.py
src/dsbase/env/: dsenv.py  env_manager.py  env_var.py
src/dsbase/files/: file_manager.py
src/dsbase/log/: local_logger.py
src/dsbase/media/: media_manager.py
src/dsbase/notify/: send_mail.py  send_telegram.py  telegram_api.py
src/dsbase/paths/: dspaths.py  path_keeper.py
src/dsbase/shell/: __init__.py
src/dsbase/text/: __init__.py  color.py  diff.py  text.py
src/dsbase/time/: __init__.py  time.py
src/dsbase/util/: __init__.py  argparser.py  deprecate.py  interrupt.py  setup.py
src/dsutil/: __init__.py  animation.py  argparser.py  configs.py  diff.py  env.py  env_vars.py  ffmpeg_functions.py  files.py  globals.py  log.py  macos.py  media.py  paths.py  progress.py  shell.py  sys.py  text.py  thread.py  time_utils.py  types.py
src/dsutil/configs/: code_configs.py  ruff.toml
src/dsutil/db/: __init__.py  db_common.py  mysql_helper.py  sqlite_helper.py
src/dsutil/env/: README.md  env.py  env_var.py
src/dsutil/files/: __init__.py  compare.py  copy.py  delete.py  file_manager.py  list.py
src/dsutil/log/: local_logger.py  log_colors.py  log_formatters.py  log_levels.py  time_aware_logger.py
src/dsutil/media/: __init__.py  ffmpeg.py  media.py  media_manager.py  video_helper.py
src/dsutil/notifiers/: send_mail.py  send_telegram.py  telegram_api.py  telegram_api_helper.py
src/dsutil/paths/: __init__.py  path_groups.py  path_types.py  paths.py
src/dsutil/tools/: __init__.py  errors.py  singleton.py  thread.py  time.py  time_parser.py
src/polykit/: __init__.py
src/polykit/cli/: __init__.py  args.py  polyargs.py  progress.py  walking_man.py
src/polykit/core/: __init__.py  attr_dict.py  decorators.py  traceback.py  ulid.py
src/polykit/env/: __init__.py  enviromancer.py  polyenv.py
src/polykit/files/: __init__.py  polydiff.py  polyfile.py  polyfiles.py
src/polykit/formatters/: diff.py  text.py
src/polykit/log/: __init__.py  logician.py  polylog.py  supabase_handler.py  time_aware.py
(+25 files in other folders)
