[tool.poetry]
name = "dsutil"
version = "1.7.0"
description = "Personal Python utility library"
authors = ["Danny Stewart <danny@stewart.cc>"]
readme = "README.md"
packages = [{include = "dsutil", from = "src"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12"
halo = ">=0.0.31"
natsort = ">=8.4.0"
pygments = ">=2.18.0"
python-dotenv = ">=1.0.1"
requests = ">=2.32.3"
send2trash = ">=1.8.3"
termcolor = ">=2.5.0"
types-requests = ">=2.32.0.20241016"
types-send2trash = ">=1.8.2.7"
tzdata = { version = ">=2024.2", markers = "sys_platform == 'win32'" }

[tool.poetry.group.dev.dependencies]
mypy = ">=1.14.1"
ruff = ">=0.8.5"

[tool.poetry.scripts]
code-configs = "dsutil.configs.code_configs:main"
