[project]
name = "dsutil"
version = "1.8.4"
description = "Personal Python utility library"
authors = [{ name = "Danny Stewart", email = "danny@stewart.cc" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "halo>=0.0.31",
    "natsort>=8.4.0",
    "platformdirs (>=4.3.6)",
    "pygments>=2.18.0",
    "python-dateutil (>=2.9.0.post0)",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "send2trash>=1.8.3",
    "termcolor>=2.5.0",
    "types-requests>=2.32.0.20241016",
    "types-send2trash>=1.8.2.7",
    "tzdata>=2024.2",
]

[project.optional-dependencies]
dev = ["mypy>=1.14.1", "ruff>=0.8.5"]

[tool.poetry.group.dev.dependencies]
mypy = ">=1.14.1"
ruff = ">=0.8.5"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
code-configs = "dsutil.configs.code_configs:main"
